<resources>
    <string name="app_name">Aula05</string>
    <string name="search">Pesquisar</string>
    <string name="create">Criar</string>
    <string name="nome">Nome</string>
    <string name="localizacao">Localização</string>
    <string name="descricao">Descrição</string>
    <string name="go_to_maps">Go To Maps</string>
    <string name="go_to_web">Go To WEB</string>
    <string name="go_to_camera">Go To Camera</string>
</resources>
