<?xml version="1.0" encoding="utf-8"?>
<!-- TODO (1) Criação do layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".NodeActivity">

    <TextView
            android:id="@+id/node_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
            android:id="@+id/node_localizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizacao"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
            android:id="@+id/node_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
            android:id="@+id/button_go_to_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_maps" />

    <Button
            android:id="@+id/button_go_to_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_web" />

    <Button
            android:id="@+id/button_go_to_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_camera" />
</LinearLayout>
